[gd_scene load_steps=6 format=3 uid="uid://c0aesh78eqqjf"]

[ext_resource type="Script" path="res://scripts/explosion.gd" id="1_2mvwe"]
[ext_resource type="Texture2D" uid="uid://d0n1w3x3kctmu" path="res://Asset/entities/bomb/explosion.png" id="1_tji8s"]
[ext_resource type="Texture2D" uid="uid://cs2kyphm3y3m8" path="res://Asset/entities/bomb/explosion2.png" id="3_pctpe"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fqf4c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_tji8s")
}, {
"duration": 1.0,
"texture": ExtResource("3_pctpe")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vlkro"]
radius = 16.0

[node name="Explosion" type="Node2D"]
script = ExtResource("1_2mvwe")

[node name="ExplosionSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fqf4c")
frame_progress = 0.234887
speed_scale = 0.5

[node name="ExplosionArea" type="Area2D" parent="."]

[node name="ExplosionAreaShape" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource("CircleShape2D_vlkro")

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="animation_finished" from="ExplosionSprite" to="." method="_on_explosion_sprite_animation_finished"]
[connection signal="body_entered" from="ExplosionArea" to="." method="_on_explosion_area_body_entered"]
